--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,6 +8,10 @@
     width: 200px;
     height: 200px;
     background: #FFF;
+    -webkit-transition: background-color 0.5s ease-out;
+    -moz-transition: background-color 0.5s ease-out;
+    -o-transition: background-color 0.5s ease-out;
+    transition: background-color 0.5s ease-out;
     cursor: pointer;
 
     span {
